# surface-triangulation

./: .gitignore  README.md  pyproject.toml
docs/: notes.md  rapport.md  synthese.md
src/surface_triangulation/: __init__.py  app.py  main.py
src/surface_triangulation/config/: app_config.py
src/surface_triangulation/core/models/: triangulation_contraints.py  triangulation_objectives.py  triangulation_problem.py  triangulation_solution.py
src/surface_triangulation/core/services/: triangulation_service.py
src/surface_triangulation/mesh_io/: mesh_data.py  mesh_loader_registry.py  mesh_loader_service.py  trimesh_loader_service.py  txt_loader_service.py
src/surface_triangulation/solvers/gurobi/: gurobi_data_mapper.py  gurobi_triangulation_service.py
src/surface_triangulation/ui/: launcher.py  main_window.py
src/surface_triangulation/ui/controllers/: canvas_controller.py  config_controller.py  triangulation_controller.py
src/surface_triangulation/ui/data_mappers/: core_data_mapper.py
src/surface_triangulation/ui/models/: mesh_model.py  triangulation_config_model.py
src/surface_triangulation/ui/renderers/: render_mode.py
src/surface_triangulation/ui/services/: input_parser_service.py  io_service.py  triangulation_service.py
src/surface_triangulation/ui/utils/: exception_handling.py
src/surface_triangulation/ui/views/: main.py
src/surface_triangulation/utils/: csv_parsing.py  geometry.py
tests/resources/e2e/: surface_triangulation.glb
tests/unit/solvers/: conftest.py
tests/unit/utils/: test_geometry.py
tools/: generate_triangulation_problem.py
(+55 files in other folders)
